fixing z-index of yellow section in contact form. Previously it was sliding over the top nav if your window was short enough.

--- a/style.css
+++ b/style.css
@@ -911,7 +911,7 @@ input.bnt-submit:hover {
 	background: #fabe50;
     box-sizing: border-box;
 	-moz-box-sizing:border-box;
-	z-index: 100;
+	z-index: 99;
 }
 
 #newsletter:after {
